# annotation-transfer-tool

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  ToolSelector.tsx  i18n.ts  types.ts
frontend/src/app/annotation-transfer/: AnnotationTransferApp.tsx  i18n.ts
frontend/src/app/annotation-transfer/components/: SourcePanel.tsx  TargetPanel.tsx  TransferRulesPanel.tsx
frontend/src/app/components/: AppHeader.tsx  SourcePanel.tsx  TargetPanel.tsx  TransferRulesPanel.tsx
frontend/src/app/pydurma/: PydurmaApp.tsx  i18n.ts
frontend/src/app/pydurma/components/: ExportPanel.tsx  ResolvedPreview.tsx  VariantResolver.tsx  WitnessUploadPanel.tsx
frontend/src/app/pydurma/hooks/: useCollation.ts  useExport.ts  (+2 more)
frontend/src/app/shared/: AppFooter.tsx  AppHeader.tsx  ThemeToggle.tsx  brand.ts
frontend/src/components/ui/: dropdown-menu.tsx  tabs.tsx
frontend/src/lib/: api.ts  files.ts  patterns.ts
frontend/src/lib/api/: pydurma.ts  transfer.ts
frontend/src/styles/: fonts.css  theme.css
src/annotation_transfer_tool/: main.py
src/annotation_transfer_tool/api/: router.py
src/annotation_transfer_tool/api/routes/: transfer.py  upload.py
src/annotation_transfer_tool/schemas/: transfer.py  upload.py
src/annotation_transfer_tool/services/: transfer.py
src/pydurma_web/: main.py
src/pydurma_web/api/: collation.py  export.py  health.py  options.py  router.py
src/pydurma_web/core/: config.py  exceptions.py
src/pydurma_web/schemas/: collation.py
src/pydurma_web/services/: collation.py  matrix.py  pipeline.py  resolve.py  session_store.py
src/webuddhsit_tools/: main.py
src/webuddhsit_tools/api/: health.py  router.py
tests/: conftest.py  fixtures.py  test_collation.py  test_collation_service.py  test_collation_validation.py  test_example.py  test_export.py  test_health.py  test_options.py  test_resolve.py  test_static.py  test_transfer_api.py  test_upload_api.py
(+7 files in other folders)
