[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation_transfer_tool"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "Annotation transfer tool — FastAPI app with fast-antx backend"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
    "fast-antx>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/OpenPecha/annotation-transfer-tool"
"Bug Tracker" = "https://github.com/OpenPecha/annotation-transfer-tool/issues"
